# learn-gtest

./: .gitpod.yml  CMakeLists.txt  README.md  install_deps_ubuntu.sh
01.start/: start.cpp  start.h
01.test/: start_test.cpp  test.cpp
02.test_f/: test_f.cpp
03.test_p/: test_p.cpp
04.typed_test/: typed_test.cpp
05.typed_test_p/: typed_test_p.cpp
06.friend_test/: friend_test.cpp
07.scoped_trace/: scoped_trace.cpp
08.skip_test/: skip_test.cpp
09.generalized_assert/: generalized_assert.cpp
10.expect_throw/: expect_throw.cpp
11.better_error_message/: better_error_message.cpp
12.compare_float/: compare_float.cpp
13.string_assert.cpp/: string_assert.cpp
14.custom_print/: custom_print.cpp
15.death_test/: death_test.cpp
16.expect_and_assert/: expect_and_assert.cpp
17.test_on_subroutine/: test_on_subroutine.cpp
18.shared_resource/: shared_resource.cpp
19.command_line/: command_line.cpp
20.gmock_start/: gmock_start.cpp
21.call_with_param/: call_with_param.cpp
22.call_times/: call_times.cpp
23.return/: return.cpp
24.multiple_expectation/: multiple_expectation.cpp
25.order/: order.cpp
26.template_commas/: template_commas.cpp
27.private_func/: private_func.cpp
28.overload/: overload.cpp
29.template_class/: template_class.cpp
30.non_virtual_func/: non_virtual_func.cpp
31.free_func/: free_func.cpp
32.nice_strict/: nice_strict.cpp
33.complex_interface/: complex_interface.cpp
34.delegating/: degegating.cpp
35.matcher/: matcher.cpp
36.args/: args.cpp
37.member/: member.cpp
38.pointer/: pointer.cpp
(+2 files in other folders)
